--- a/8-gps1.1/gps1.1.css
+++ b/8-gps1.1/gps1.1.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Kimberley";
-  src: url(YanoneKaffeesatz-Regular.ttf) format("truetype");
+  src: url(../fonts/YanoneKaffeesatz-Regular.ttf) format("truetype");
 }
 
 body {
