--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -68,6 +68,22 @@ a {
   text-decoration: none;
 }
 
+a img {
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+
+a img:hover {
+  -webkit-transform: rotate(-10deg);
+     -moz-transform: rotate(-10deg);
+       -o-transform: rotate(-10deg);
+      -ms-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+
 a:hover {
   color: black;
 }
@@ -82,6 +98,20 @@ nav {
   margin: 1% 1% 0% 1%;
   display: inline;
   padding: 1% 1% 0% 7%;
+}
+
+nav a {
+  color: #03c;
+    -webkit-transition: 0.5s;
+     -moz-transition: 0.5s;
+     -o-transition: 0.5s;
+     -ms-transition: 0.5s;
+     transition: 0.5s;
+}
+
+nav a:hover {
+  color: transparent;
+    text-shadow: 0 0 5px #03c;
 }
 
 nav a, .social a {
