--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -104,3 +104,9 @@ nav a, .social a {
   display: inline;
   padding: 1% 1% 1% 1%;
 }
+
+code {
+  /*background-color: yellow;*/
+  color: blue;
+  font-weight: bold;
+}
