--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -30,7 +30,7 @@ body {
 }
 
 header {
-  overflow: auto;
+  overflow: hidden;
   font-size: 2.5em;
   font-family: "Kimberley";
 }
@@ -50,10 +50,6 @@ footer {
 .main {
   overflow: auto;
   font-size: 1.2em;  
-}
-
-.about, header, footer, .profile {
-
 }
 
 .about {
@@ -87,9 +83,9 @@ img:hover {
 nav {
   float: left;
   width: 40%;  
-  margin: 1% 1% 0% 1%;
+  margin: 1% 1% 0 1%;
   display: inline;
-  padding: 1% 1% 0% 7%;
+  padding: 1% 1% 0 7%;
 }
 
 nav a, .social a {
