minor style amendments

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,8 +26,8 @@ nav {
         -ms-transition: 0.5s;
         transition: 0.5s;
         &:hover {
-            color: transparent;
-            text-shadow: 0 0 5px #03c;
+            // color: transparent;
+            // text-shadow: 0 0 5px #03c;
         }
     }
 }
