--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <div class="page-content">
       <div class="main">
         {{ content }}
+        {% include disqus.html %}
       </div>
     </div>
 
