--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
-{{content}}
+<h1>{{ page.title }}</h1>
+<h5>{{ site.time | date: '%B %d, %Y' }} by Osman Afridi</h5>
 
+<div class="blog_post">
+  {{content}}
+</div>
+
+<p><a href="{{ site.baseurl }}/blog-posts/index.html">Back</a></p>
 {% include disqus.html %}
