--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,5 @@
 header {
     overflow: auto;
-    font-size: 2.8em;
-    font-family: "Kimberley";
 }
 
 footer {
@@ -14,21 +12,19 @@ footer {
 nav {
     float: left;
     width: 40%;
-    margin: 1% 1% 0% 1%;
+    margin: 0 1% 0% 1%;
     display: inline;
-    padding: 1% 1% 0% 7%;
+    padding: 1% 1% 0% 7%;    
     a {
-        color: #03c;
-        padding: 3%;
-        -webkit-transition: 0.5s;
-        -moz-transition: 0.5s;
-        -o-transition: 0.5s;
-        -ms-transition: 0.5s;
-        transition: 0.5s;
-        &:hover {
-            // color: transparent;
-            // text-shadow: 0 0 5px #03c;
+        font-size: 2em;
+        color: black;
+        padding: 2%;
+        &:visited {
+            color: black;
         }
+        &:hover {
+            color: red;
+        }        
     }
 }
 
@@ -38,7 +34,7 @@ nav {
     float: right;
     width: 45%;
     display: inline;
-    padding: 1% 1% 1% 1%;
+    padding: 0 1% 0 1%;
     a {
         padding: 3%;
         img {
@@ -62,6 +58,7 @@ nav {
 .main {
     overflow: auto;
     font-size: 1.2em;
+    border-bottom: solid 1px grey;
 }
 
 .about {
