made typography responsive in nav to accommodate smaller widths

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,8 +15,8 @@ nav {
     margin: 0 1% 0% 1%;
     display: inline;
     padding: 1% 1% 0% 7%;    
-    a {
-        font-size: 2em;
+    a { 
+        font-size: 2vw;       
         color: black;
         padding: 2%;
         &:visited {
