organized blog posts and removed redundant

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<div class="about">
 <h1>{{ page.title }}</h1>
 <h5>{{ site.time | date: '%B %d, %Y' }} by Osman Afridi</h5>
 
@@ -11,3 +11,4 @@ layout: default
 
 <p><a href="{{ site.baseurl }}/blog-posts/index.html">Back</a></p>
 {% include disqus.html %}
+</div>
