--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -23,7 +23,7 @@ nav {
             color: black;
         }
         &:hover {
-            color: blue;
+            color: grey;
         }        
     }
 }
