--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,12 +20,11 @@ body {
     font-weight: 300;
     color: $text-color;
     background-color: $background-color;
-    background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;
+    background: #e7e7e7 0 0 repeat;
     width: 80%;
     height:100%;
     padding:0;
     margin: 0 auto;
-    background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
     overflow: auto;
 }
