--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
   <nav>
     <a href="{{ site.baseurl }}/">Home</a>
     <a href="{{ site.baseurl }}/projects/index.html">Projects</a>
-    <a href="{{ site.baseurl }}/blog-posts/index.html">Blog</a>
-    <a href="mailto:osmanisalso@gmail.com">@Email</a>
+    <a href="{{ site.baseurl }}/blog/index.html">Blog</a>
+    <a href="{{ site.baseurl }}/about/index.html">About</a>    
   </nav>
   <span class="social">
     <a href="https://github.com/oafridi">
