--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Home of Osman Afridi</title>
   <link rel="stylesheet" href="{{ "/css/index.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/lightbox.css" | prepend: site.baseurl }}">
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/lightbox.min.js"></script>
+  <!-- <script src="{{ relative }}js/lightbox.min.js"></script> -->
 </head>
 <body>
   {% include header.html %}
