--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
     <a href="{{ site.baseurl }}/">Home</a>
     <a href="{{ site.baseurl }}/projects/index.html">Projects</a>
     <a href="{{ site.baseurl }}/about/index.html">About</a>    
+    <a href="mailto:osmanisalso@gmail.com">Email</a>    
   </nav>
   <span class="social">
     <a href="https://github.com/oafridi">
