--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
+comments: true
 ---
 <div class="about">
-
   <header class="post-header">
     <h2 class="post-title">{{ page.title }}</h2>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
@@ -11,5 +11,5 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
-
+  {% include disqus.html %}
 </div>
