change header color

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 comments: true
 ---
 <div class="about">
-  <header class="post-header">
-    <h2 class="post-title">{{ page.title }}</h2>
+  <!-- <header class="post-header"> -->
+    <h3>{{ page.title }}</h3>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
