--- a/css/index.scss
+++ b/css/index.scss
@@ -7,7 +7,7 @@
 }
 
 // Variables
-$header-color: #d5000d;
+$header-color: #1600D5;
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   14px;
 $small-font-size:  $base-font-size * 0.875;
